# TmkStore

./: README.md  TmkTgStore.sln  package-lock.json
Client/: index.html  package-lock.json  package.json  vite.config.mjs
Client/src/: App.tsx  Router.tsx  data.json
Domain/Entities/: Cart.cs  CartItem.cs  Category.cs  Gost.cs  Manufacturer.cs  Nomenclature.cs  Order.cs  Price.cs  Remnants.cs  SteelGrade.cs  Stock.cs  Type.cs  User.cs
Domain/Enums/: NomenclatureSortBy.cs  NomenclatureStatus.cs  ScaleType.cs
Domain/Exceptions/: NotFound.cs
Domain/Interfaces/: ICartRepository.cs  IGostRepository.cs  IManufatureRepository.cs  INomenclatureRepository.cs  IOrderRepository.cs  IPriceRepository.cs  IRemnantsRepository.cs  ISteelGradesRepository.cs  IStockRepository.cs  ITypeRepository.cs  IUserRepository.cs
Infrastucture/: DependencyInjection.cs  Infrastucture.csproj
Infrastucture/Application/: CartRepository.cs  GostRepository.cs  ManufactureRepository.cs  NomenclatureRepository.cs  OrderRepository.cs  PriceRepository.cs  RemnantsRepository.cs  SteelGradeRepository.cs  StockRepository.cs  TypeRepository.cs  UserRepository.cs
Infrastucture/DataBase/: ApplicationContext.cs  IDbContext.cs
Infrastucture/Migrations/: 20251007215248_InitialCreate.Designer.cs  20251007215248_InitialCreate.cs  ApplicationContextModelSnapshot.cs
TelegramBot/: .env  Dockerfile  pyproject.toml
TelegramBot/src/telegram_bot/: bot.py
WebApi/: Program.cs  WebApi.csproj
WebApi/Controllers/: Handbook.cs  Orders.cs  Products.cs
WebApi/Properties/: launchSettings.json
(+44 files in other folders)
